compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__tuples__constant_tuples-2.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 88
expression: "\nconst e = #(\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n)\n"
---
const e = [
  "loooooooooooooong",
  "loooooooooooong",
  "loooooooooooooong",
  "loooooooooooooong",
  "loooooooooooong",
  "loooooooooooooong",
];

