compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__tuples__constant_tuples1.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
expression: "\npub const e = #(\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n)\n"
---
----- SOURCE CODE

pub const e = #(
  "loooooooooooooong", "loooooooooooong", "loooooooooooooong",
  "loooooooooooooong", "loooooooooooong", "loooooooooooooong",
)


----- COMPILED JAVASCRIPT
export const e = [
  "loooooooooooooong",
  "loooooooooooong",
  "loooooooooooooong",
  "loooooooooooooong",
  "loooooooooooong",
  "loooooooooooooong",
];
