compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__tuples__nested_pattern.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
expression: "\npub fn go(x) {\n  case x {\n    #(2, #(a, b)) -> a + b\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    #(2, #(a, b)) -> a + b
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x[0] === 2) {
    let a = x[1][0];
    let b = x[1][1];
    return a + b;
  } else {
    return 1;
  }
}
