compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__tuples__tuple-2.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 13
expression: "\nfn go() {\n  #(\n    \"1111111111111111111111111111111\",\n    #(\"1111111111111111111111111111111\", \"2\", \"3\"),\n    \"3\",\n  )\n}\n"
---
function go() {
  return [
    "1111111111111111111111111111111",
    ["1111111111111111111111111111111", "2", "3"],
    "3",
  ];
}

