compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__tuples__tuple_access.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
expression: "\npub fn go() {\n  #(1, 2).0\n}\n"
---
----- SOURCE CODE

pub fn go() {
  #(1, 2).0
}


----- COMPILED JAVASCRIPT
export function go() {
  return [1, 2][0];
}
